Bug 1386587 - Correct comment for pop3ServerBusy in localMsgs.properties. r=nONoNonO

--- a/mail/locales/en-US/chrome/messenger/localMsgs.properties
+++ b/mail/locales/en-US/chrome/messenger/localMsgs.properties
@@ -88,7 +88,7 @@ copyingMessagesStatus=Copying %S of %S messages to %S
 
 movingMessagesStatus=Moving %S of %S messages to %S
 
-# Status - write error occurred
+# Status - pop3 server or folder busy
 # LOCALIZATION NOTE (pop3ServerBusy): Do not translate the word "%S" below.
 # Place %S where the account name should appear.
 pop3ServerBusy=The account %S is being processed. Please wait until processing is complete to get messages.
