--- a/suite/locales/en-US/chrome/mailnews/localMsgs.properties
+++ b/suite/locales/en-US/chrome/mailnews/localMsgs.properties
@@ -63,7 +63,7 @@ pop3PasswordFailed=Sending of password for user %1$S did not succeed.
 # Status - write error occurred
 pop3MessageWriteError=Unable to write the email to the mailbox. Make sure the file system allows you write privileges, and you have enough disk space to copy the mailbox.
 
-# Status - write error occurred
+# Status - pop3 server or folder busy
 # LOCALIZATION NOTE (pop3ServerBusy): Do not translate the word "%S" below.
 # Place %S where the account name should appear.
 pop3ServerBusy=The account %S is being processed. Please wait until processing is complete to get messages.
