Bug 1294027 - use mail sender's address for SMTP MAIL FROM. r=jorgk

--- a/mail/locales/en-US/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/mail/locales/en-US/chrome/messenger/messengercompose/composeMsgs.properties
@@ -38,7 +38,9 @@ dontShowAlert=THIS IS JUST A PLACEHOLDER.  YOU SHOULD NEVER SEE THIS STRING.
 
 ## LOCALIZATION NOTE (tcpReadError): argument %s is the network error
 tcpReadError=A network error occurred while receiving data.  (Network Error: %s)  Try connecting again.
-couldNotGetUsersMailAddress=An error occurred while sending mail:  the return mail address was invalid.  Please verify that your email address is correct in your account settings and try again.
+couldNotGetUsersMailAddress2=An error occurred while sending mail: the sender's address (From:) was invalid. Please verify that this email address is correct and try again.
+couldNotGetSendersIdentity=An error occurred while sending mail: the sender identity was invalid. Please verify the configuration of your identity and try again.
+
 mimeMpartAttachmentError=Attachment error.
 failedCopyOperation=The message was sent successfully, but could not be copied to your Sent folder.
 nntpNoCrossPosting=You can only send a message to one news server at a time.
