Port bug 1444926 to TB/SM: fix locales/Makefile.in etc. due to move from devtools/shim to devtools/startup. rs=bustage-fix

--- a/mail/locales/l10n.toml
+++ b/mail/locales/l10n.toml
@@ -103,8 +103,8 @@ locales = [
     path = "calendar/locales/l10n.toml"
 
 [[paths]]
-    reference = "{mozilla}/devtools/shim/locales/en-US/**"
-    l10n = "{l}/devtools/shim/**"
+    reference = "{mozilla}/devtools/startup/locales/en-US/**"
+    l10n = "{l}/devtools/startup/**"
 
 # ignore MOZ_LANGPACK_CONTRIBUTORS
 [[filters]]
