--- a/mail/locales/en-US/chrome/messenger/subscribe.properties
+++ b/mail/locales/en-US/chrome/messenger/subscribe.properties
@@ -4,6 +4,8 @@
 
 subscribeLabel-nntp=Select the newsgroups to subscribe to:
 subscribeLabel-imap=Select the folders to subscribe to:
+columnHeader-nntp=Newsgroup name
+columnHeader-imap=Folder name
 currentListTab-nntp.label=Current Group List
 currentListTab-nntp.accesskey=L
 currentListTab-imap.label=Folder List
