Bug 1762733 - Remove obsolete plugin code. r=IanN a=IanN
Specifically:
- css and image data from modern theme.
- Plugin notifications other that crashed.
  The crashed notifiction is probably broken and needs work if we are ever
  able to enable EME e.g. replacement for the non existing moz-handler-crashed
  css.
- Plugins as application handlers in preferences.
- Plugin permissions in the Data Manager.

--- a/suite/locales/en-US/chrome/common/pref/pref-scripts.dtd
+++ b/suite/locales/en-US/chrome/common/pref/pref-scripts.dtd
@@ -4,8 +4,8 @@
 
 <!-- extracted from content/pref-scripts.xul -->
 
-<!--LOCALIZATION NOTE : FILE The 'Scripts & Plugins' preferences dialog -->
-<!ENTITY pref.scripts.title              "Scripts &amp; Plugins">
+<!--LOCALIZATION NOTE : FILE The 'Scripts' preferences dialog -->
+<!ENTITY pref.scripts2.title             "Scripts">
 
 <!ENTITY navigator.label                 "Browser">
 <!ENTITY navigator.accesskey             "B">
